fixed li font size and worked with flex wrap and justification

--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,13 @@ ul{
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 li{
     background-color: #89DEEF;
+    margin: 3px;
+    font-size: 13px;
 }
 
 html{
